swagger complete types 50 endpoints, 10 controllers
